# auth-stading

./: Dockerfile  README.md  docker-compose.pgadmin.yaml  docker-compose.yaml  main.py  pyproject.toml  python.code-workspace  requirements.txt  set-docker-net-volume.sh
src/: alembic.ini  app.py
src/alembic/: env.py
src/alembic/versions/: 6c48d9e68477_create_user_model.py  ffda66970351_create_user_model.py
src/core/: db_init.py  settings.py  start.py
src/core/startup/: creation.py
src/crud/db/: user_service.py
src/errors/: db_errors.py
src/models/: __init__.py  user_model.py
src/schemas/: user_schema.py
tests/: conftest.py  consts_and_utils.py
tests/core/startup/: test_creation.py
tests/crud/db/: test_user_service.py
tests/fixtures/: auth_staff.py  creation_staff.py  db_technical.py
tests/models/: test_user_model.py
